added Twitter API, linked up ENV variables and started testing on front end

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Welcome!</h1>
+
+<h2>Top 5 Trending in Philly Right Now:</h2>
+<ul>
+	<li><%= @trend1 %></li>
+	<li><%= @trend2 %></li>
+	<li><%= @trend3 %></li>
+	<li><%= @trend4 %></li>
+	<li><%= @trend5 %></li>
+</ul>
