added temporary instagram implementation, google adsense

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,40 @@
 <h1>Welcome!</h1>
 
-<h2>Top 5 Trending in Philly Right Now:</h2>
+<h2>Top 10 Twitter Trends in Philly Right Now:</h2>
 <ul>
 	<li><%= @trend1 %></li>
 	<li><%= @trend2 %></li>
 	<li><%= @trend3 %></li>
-	<li><%= @trend4 %></li>
-	<li><%= @trend5 %></li>
+	<li>trend 4 will be here</li>
+	<li>trend 5 will be here</li>
+	<li>trend 6 will be here</li>
+	<li>trend 7 will be here</li>
+	<li>trend 8 will be here</li>
+	<li>trend 9 will be here</li>
+	<li>trend 10 will be here</li>
+
 </ul>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h1>Latest Instagram Pictures posted near Philly:</h1>
+<p>
+	<iframe src="http://snapwidget.com/in/?h=cGhpbGFkZWxwaGlhfGlufDEyNXwzfDN8fG5vfDV8bm9uZXxvblN0YXJ0fHllc3xubw==&ve=201115" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:390px; height:390px"></iframe>
+</p>
+<p>
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- Initial Responsive Ad -->
+	<ins class="adsbygoogle"
+	     style="display:block"
+	     data-ad-client="ca-pub-8193639314462440"
+	     data-ad-slot="5303444617"
+	     data-ad-format="auto"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+</p>
